Fix bug where avatars flicker

--- a/client/app/global.css
+++ b/client/app/global.css
@@ -7,10 +7,16 @@ body {
 }
 
 button {
+  background-color: lightgray;
   padding: 1px 6px;
   border-radius: 4px;
 }
 
 button:disabled {
   background-color: gray;
+}
+
+input {
+  padding: 1px 6px;
+  border-radius: 4px;
 }
